--- a/join.html
+++ b/join.html
@@ -50,8 +50,10 @@
                             </div>
                             <div class="formgroup">
                                 <span class="mark">*</span>
-                                <input type="text" placeholder="请输入您的密码">
-                                <span class="icon-visibility"></span>
+                                <div class="text-icon">
+                                    <input type="text" placeholder="请输入您的密码">
+                                    <span class="icon-visibility"></span>
+                                </div>
                                 <span class="mark text-black icon-information">密码为6-12位字母与数字的组合</span>
                             </div>
                             <div class="formgroup">
